[gd_scene load_steps=28 format=3 uid="uid://c5y3gl3fd7y82"]

[ext_resource type="Script" path="res://Scripts/merida.gd" id="1_8pko1"]
[ext_resource type="Texture2D" uid="uid://dyicq4lev2sw7" path="res://Art/Sprites/khsom___disney_characters_rpg_maker_vx_sprites_by_reversecrown_d6gq7ob.png" id="2_11us6"]
[ext_resource type="Texture2D" uid="uid://ccr6352bcfwip" path="res://Art/Sprites/images-removebg-preview.png" id="3_3tyvg"]
[ext_resource type="FontFile" uid="uid://dbnbiierqlmpj" path="res://Art/Font/Avengers.ttf" id="3_icank"]
[ext_resource type="Texture2D" uid="uid://ck4ia0hspjwve" path="res://Art/Sprites/descarga-removebg-preview.png" id="4_5ocbp"]
[ext_resource type="Texture2D" uid="uid://b5n2qybwhothh" path="res://Art/Vidas/0vida_merida.png" id="6_bqrdx"]
[ext_resource type="Texture2D" uid="uid://t11kqlfinfoh" path="res://Art/Vidas/vida1_merida.png" id="7_ox6mg"]
[ext_resource type="Texture2D" uid="uid://do7wv65qnlgt0" path="res://Art/Vidas/vida2_merida.png" id="8_lwl1o"]
[ext_resource type="Texture2D" uid="uid://cfexu2np10xer" path="res://Art/Vidas/vida3_merida.png" id="9_83a4r"]
[ext_resource type="Texture2D" uid="uid://bgwuvbx72wbh1" path="res://Art/Vidas/vida4_merida.png" id="10_d1t47"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2r7bf"]
atlas = ExtResource("2_11us6")
region = Rect2(0, 96, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q6g4"]
atlas = ExtResource("2_11us6")
region = Rect2(31, 96, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66d6x"]
atlas = ExtResource("2_11us6")
region = Rect2(62, 96, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tv3b"]
atlas = ExtResource("2_11us6")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rcjr"]
atlas = ExtResource("2_11us6")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcmry"]
atlas = ExtResource("2_11us6")
region = Rect2(62, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cush"]
atlas = ExtResource("2_11us6")
region = Rect2(0, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j65yf"]
atlas = ExtResource("2_11us6")
region = Rect2(31, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1drbl"]
atlas = ExtResource("2_11us6")
region = Rect2(62, 32, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2bvh"]
atlas = ExtResource("2_11us6")
region = Rect2(0, 64, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gl8x"]
atlas = ExtResource("2_11us6")
region = Rect2(31, 64, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ydw"]
atlas = ExtResource("2_11us6")
region = Rect2(62, 64, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aiai2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r7bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q6g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66d6x")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tv3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rcjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcmry")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cush")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j65yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1drbl")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2bvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gl8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ydw")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ph2ne"]
radius = 24.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nffse"]
radius = 23.0
height = 72.0

[sub_resource type="LabelSettings" id="LabelSettings_6afk2"]
line_spacing = 15.0
font = ExtResource("3_icank")

[sub_resource type="LabelSettings" id="LabelSettings_fv3tv"]
line_spacing = 15.0
font = ExtResource("3_icank")

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_8pko1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.00004, 220)
scale = Vector2(1.93548, 2.1875)
sprite_frames = SubResource("SpriteFrames_aiai2")
animation = &"back_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 221)
shape = SubResource("CapsuleShape2D_ph2ne")

[node name="Area2D" type="Area2D" parent="." groups=["player1"]]
position = Vector2(559, 617)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-556, -396)
shape = SubResource("CapsuleShape2D_nffse")

[node name="R" type="Label" parent="."]
visible = false
offset_left = 380.0
offset_top = -318.0
offset_right = 474.0
offset_bottom = -295.0
text = "Racionalista"
label_settings = SubResource("LabelSettings_6afk2")

[node name="E" type="Label" parent="."]
visible = false
offset_left = 386.0
offset_top = -320.0
offset_right = 518.0
offset_bottom = -287.0
text = "Empirista"
label_settings = SubResource("LabelSettings_fv3tv")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ironman" type="Sprite2D" parent="."]
visible = false
position = Vector2(525, -273)
scale = Vector2(0.464612, 0.426087)
texture = ExtResource("3_3tyvg")

[node name="cap" type="Sprite2D" parent="."]
visible = false
position = Vector2(526, -269)
scale = Vector2(0.464444, 0.397778)
texture = ExtResource("4_5ocbp")

[node name="Vida0" type="Sprite2D" parent="."]
position = Vector2(-413, -245)
scale = Vector2(0.706186, 1.34483)
texture = ExtResource("6_bqrdx")

[node name="Vida1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-412, -251)
texture = ExtResource("7_ox6mg")

[node name="Vida2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-412, -247)
texture = ExtResource("8_lwl1o")

[node name="Vida3" type="Sprite2D" parent="."]
visible = false
position = Vector2(-412, -247)
texture = ExtResource("9_83a4r")

[node name="Vida4" type="Sprite2D" parent="."]
visible = false
position = Vector2(-416, -245)
texture = ExtResource("10_d1t47")
